crates/stackable-versioned-macros/fixtures/snapshots/stackable_versioned_macros__test__k8s_snapshots.snap
---
source: crates/stackable-versioned-macros/src/lib.rs
expression: formatted
input_file: crates/stackable-versioned-macros/fixtures/inputs/k8s/basic.rs
---
#[automatically_derived]
pub mod v1alpha1 {
    use super::*;
    #[derive(Clone, Debug, serde::Deserialize, serde::Serialize, schemars::JsonSchema)]
    #[derive(::kube::CustomResource)]
    #[kube(
        group = "stackable.tech",
        version = "v1alpha1",
        kind = "Foo",
        singular = "foo",
        plural = "foos",
        namespaced
    )]
    pub struct FooSpec {
        pub baz: bool,
    }
}
#[automatically_derived]
impl From<v1alpha1::FooSpec> for v1beta1::FooSpec {
    fn from(__sv_foospec: v1alpha1::FooSpec) -> Self {
        Self {
            bah: ::std::default::Default::default(),
            baz: __sv_foospec.baz,
        }
    }
}
#[automatically_derived]
pub mod v1beta1 {
    use super::*;
    #[derive(Clone, Debug, serde::Deserialize, serde::Serialize, schemars::JsonSchema)]
    #[derive(::kube::CustomResource)]
    #[kube(
        group = "stackable.tech",
        version = "v1beta1",
        kind = "Foo",
        singular = "foo",
        plural = "foos",
        namespaced
    )]
    pub struct FooSpec {
        pub bah: u16,
        pub baz: bool,
    }
}
#[automatically_derived]
impl From<v1beta1::FooSpec> for v1::FooSpec {
    fn from(__sv_foospec: v1beta1::FooSpec) -> Self {
        Self {
            bar: __sv_foospec.bah.into(),
            baz: __sv_foospec.baz,
        }
    }
}
#[automatically_derived]
pub mod v1 {
    use super::*;
    #[derive(Clone, Debug, serde::Deserialize, serde::Serialize, schemars::JsonSchema)]
    #[derive(::kube::CustomResource)]
    #[kube(
        group = "stackable.tech",
        version = "v1",
        kind = "Foo",
        singular = "foo",
        plural = "foos",
        namespaced
    )]
    pub struct FooSpec {
        pub bar: usize,
        pub baz: bool,
    }
}
#[automatically_derived]
pub enum Foo {
    V1Alpha1,
    V1Beta1,
    V1,
}
#[automatically_derived]
impl ::std::fmt::Display for Foo {
    fn fmt(
        &self,
        f: &mut ::std::fmt::Formatter<'_>,
    ) -> ::std::result::Result<(), ::std::fmt::Error> {
        match self {
            Foo::V1Alpha1 => f.write_str("v1alpha1"),
            Foo::V1Beta1 => f.write_str("v1beta1"),
            Foo::V1 => f.write_str("v1"),
        }
    }
}
#[automatically_derived]
impl Foo {
    /// Generates a merged CRD which contains all versions defined using the `#[versioned()]` macro.
    pub fn merged_crd(
        stored_apiversion: Self,
    ) -> ::std::result::Result<
        ::k8s_openapi::apiextensions_apiserver::pkg::apis::apiextensions::v1::CustomResourceDefinition,
        ::kube::core::crd::MergeError,
    > {
        ::kube::core::crd::merge_crds(
            vec![
                < v1alpha1::Foo as ::kube::CustomResourceExt > ::crd(), < v1beta1::Foo as
                ::kube::CustomResourceExt > ::crd(), < v1::Foo as
                ::kube::CustomResourceExt > ::crd()
            ],
            &stored_apiversion.to_string(),
        )
    }
    /// Generates and writes a merged CRD which contains all versions defined using the `#[versioned()]`
    /// macro to a file located at `path`.
    pub fn write_merged_crd<P>(path: P, stored_apiversion: Self, operator_version: &str)
    where
        P: AsRef<::std::path::Path>,
    {
        use ::stackable_shared::yaml::{YamlSchema, SerializeOptions};
        let merged_crd = Self::merged_crd(stored_apiversion).unwrap();
        YamlSchema::write_yaml_schema(
                &merged_crd,
                path,
                operator_version,
                SerializeOptions::default(),
            )
            .unwrap();
    }
    /// Generates and writes a merged CRD which contains all versions defined using the `#[versioned()]`
    /// macro to stdout.
    pub fn print_merged_crd(stored_apiversion: Self, operator_version: &str) {
        use ::stackable_shared::yaml::{YamlSchema, SerializeOptions};
        let merged_crd = Self::merged_crd(stored_apiversion).unwrap();
        YamlSchema::print_yaml_schema(
                &merged_crd,
                operator_version,
                SerializeOptions::default(),
            )
            .unwrap();
    }
}
